[gd_scene load_steps=4 format=3 uid="uid://cgpuefc7scrf5"]

[ext_resource type="FontFile" uid="uid://bpvouls2mpuf7" path="res://Diseño/Fonts/Chonkly.otf" id="1_bscci"]
[ext_resource type="Script" path="res://scenes/Settings.gd" id="1_uot7k"]
[ext_resource type="FontFile" uid="uid://81p7b7pbndxb" path="res://Diseño/Fonts/fibberish.ttf" id="2_4k6m5"]

[node name="MarginContainer" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uot7k")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 2
color = Color(0.313726, 0.313726, 0.313726, 1)

[node name="SettingsTabs" type="TabContainer" parent="."]
layout_mode = 2
theme_override_colors/font_selected_color = Color(0.858824, 0.721569, 0, 1)
theme_override_fonts/font = ExtResource("1_bscci")
theme_override_font_sizes/font_size = 80

[node name="Video" type="TabBar" parent="SettingsTabs"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_bscci")
theme_override_font_sizes/font_size = 65

[node name="MarginContainer" type="MarginContainer" parent="SettingsTabs/Video"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="VideoSettings" type="GridContainer" parent="SettingsTabs/Video/MarginContainer"]
layout_mode = 2
theme_override_constants/v_separation = 30
columns = 2

[node name="DisplayMode" type="Label" parent="SettingsTabs/Video/MarginContainer/VideoSettings"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_4k6m5")
theme_override_font_sizes/font_size = 100
text = "DisplayMode"

[node name="DisplayButton" type="OptionButton" parent="SettingsTabs/Video/MarginContainer/VideoSettings"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_fonts/font = ExtResource("2_4k6m5")
theme_override_font_sizes/font_size = 100
item_count = 2
selected = 0
popup/item_0/text = "Windowed"
popup/item_0/id = 0
popup/item_1/text = "Fullscreen"
popup/item_1/id = 0

[node name="VsyncLabel" type="Label" parent="SettingsTabs/Video/MarginContainer/VideoSettings"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_4k6m5")
theme_override_font_sizes/font_size = 100
text = "Vsync"

[node name="VsyncButton" type="CheckButton" parent="SettingsTabs/Video/MarginContainer/VideoSettings"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_stretch_ratio = 0.0
theme_override_fonts/font = ExtResource("2_4k6m5")
theme_override_font_sizes/font_size = 100
expand_icon = true

[node name="DisplayFPS" type="Label" parent="SettingsTabs/Video/MarginContainer/VideoSettings"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_4k6m5")
theme_override_font_sizes/font_size = 100
text = "Display FPS"

[node name="DisplayFPSButton" type="CheckButton" parent="SettingsTabs/Video/MarginContainer/VideoSettings"]
layout_mode = 2
size_flags_stretch_ratio = 0.0
theme_override_fonts/font = ExtResource("2_4k6m5")
theme_override_font_sizes/font_size = 100
expand_icon = true

[node name="MaxFPS" type="Label" parent="SettingsTabs/Video/MarginContainer/VideoSettings"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_4k6m5")
theme_override_font_sizes/font_size = 100
text = "Max FPS"

[node name="HBoxContainer" type="HBoxContainer" parent="SettingsTabs/Video/MarginContainer/VideoSettings"]
layout_mode = 2
size_flags_horizontal = 10

[node name="MaxFPSVal" type="Label" parent="SettingsTabs/Video/MarginContainer/VideoSettings/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_4k6m5")
theme_override_font_sizes/font_size = 100
text = "Max"

[node name="MaxFPSSlider" type="HSlider" parent="SettingsTabs/Video/MarginContainer/VideoSettings/HBoxContainer"]
custom_minimum_size = Vector2(800, 0)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 1
min_value = 30.0
max_value = 500.0
value = 500.0

[node name="Brightness" type="Label" parent="SettingsTabs/Video/MarginContainer/VideoSettings"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_4k6m5")
theme_override_font_sizes/font_size = 100
text = "Brightness"

[node name="Brightness2" type="HBoxContainer" parent="SettingsTabs/Video/MarginContainer/VideoSettings"]
layout_mode = 2
size_flags_horizontal = 10

[node name="BrightnessSlider" type="HSlider" parent="SettingsTabs/Video/MarginContainer/VideoSettings/Brightness2"]
custom_minimum_size = Vector2(800, 0)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 1
max_value = 2.0
step = 0.1
value = 1.0

[node name="Audio" type="TabBar" parent="SettingsTabs"]
visible = false
layout_mode = 2
theme_override_fonts/font = ExtResource("1_bscci")
theme_override_font_sizes/font_size = 65

[node name="MarginContainer" type="MarginContainer" parent="SettingsTabs/Audio"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="AudioSettings" type="GridContainer" parent="SettingsTabs/Audio/MarginContainer"]
layout_mode = 2
theme_override_constants/v_separation = 30
columns = 2

[node name="MaterVolume" type="Label" parent="SettingsTabs/Audio/MarginContainer/AudioSettings"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_4k6m5")
theme_override_font_sizes/font_size = 100
text = "Master Volume"

[node name="MasterVolume" type="HBoxContainer" parent="SettingsTabs/Audio/MarginContainer/AudioSettings"]
layout_mode = 2
size_flags_horizontal = 10

[node name="MasterVolumeSlider" type="HSlider" parent="SettingsTabs/Audio/MarginContainer/AudioSettings/MasterVolume"]
custom_minimum_size = Vector2(800, 0)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 1
min_value = -50.0
max_value = 0.0
value = -10.0

[node name="MusicVolume" type="Label" parent="SettingsTabs/Audio/MarginContainer/AudioSettings"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_4k6m5")
theme_override_font_sizes/font_size = 100
text = "Music Volume"

[node name="MusicVolume2" type="HBoxContainer" parent="SettingsTabs/Audio/MarginContainer/AudioSettings"]
layout_mode = 2
size_flags_horizontal = 10

[node name="MusicVolumeSlider" type="HSlider" parent="SettingsTabs/Audio/MarginContainer/AudioSettings/MusicVolume2"]
custom_minimum_size = Vector2(800, 0)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 1
min_value = -50.0
max_value = 0.0
value = -10.0

[node name="SFXVolume" type="Label" parent="SettingsTabs/Audio/MarginContainer/AudioSettings"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_4k6m5")
theme_override_font_sizes/font_size = 100
text = "SFX Volume"

[node name="SFXVolume2" type="HBoxContainer" parent="SettingsTabs/Audio/MarginContainer/AudioSettings"]
layout_mode = 2
size_flags_horizontal = 10

[node name="SFXVolumeSlider" type="HSlider" parent="SettingsTabs/Audio/MarginContainer/AudioSettings/SFXVolume2"]
custom_minimum_size = Vector2(800, 0)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 1
min_value = -50.0
max_value = 0.0
value = -10.0

[node name="Gameplay" type="TabBar" parent="SettingsTabs"]
visible = false
layout_mode = 2
theme_override_fonts/font = ExtResource("1_bscci")
theme_override_font_sizes/font_size = 65

[node name="MarginContainer" type="MarginContainer" parent="SettingsTabs/Gameplay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="GameplaySettings" type="GridContainer" parent="SettingsTabs/Gameplay/MarginContainer"]
layout_mode = 2
theme_override_constants/v_separation = 30
columns = 2

[node name="MouseSensitivity" type="Label" parent="SettingsTabs/Gameplay/MarginContainer/GameplaySettings"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_4k6m5")
theme_override_font_sizes/font_size = 100
text = "Mouse Sensitivity"

[node name="MouseSensitivity2" type="HBoxContainer" parent="SettingsTabs/Gameplay/MarginContainer/GameplaySettings"]
layout_mode = 2
size_flags_horizontal = 10

[node name="MouseSensitivitySlider" type="HSlider" parent="SettingsTabs/Gameplay/MarginContainer/GameplaySettings/MouseSensitivity2"]
custom_minimum_size = Vector2(800, 0)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 1
min_value = 0.05
max_value = 3.0
step = 0.01
value = 0.1

[connection signal="item_selected" from="SettingsTabs/Video/MarginContainer/VideoSettings/DisplayButton" to="." method="_on_display_button_item_selected"]
[connection signal="toggled" from="SettingsTabs/Video/MarginContainer/VideoSettings/VsyncButton" to="." method="_on_vsync_button_toggled"]
[connection signal="toggled" from="SettingsTabs/Video/MarginContainer/VideoSettings/DisplayFPSButton" to="." method="_on_display_fps_button_toggled"]
[connection signal="value_changed" from="SettingsTabs/Video/MarginContainer/VideoSettings/HBoxContainer/MaxFPSSlider" to="." method="_on_max_fps_slider_value_changed"]
[connection signal="value_changed" from="SettingsTabs/Video/MarginContainer/VideoSettings/Brightness2/BrightnessSlider" to="." method="_on_brightness_slider_value_changed"]
[connection signal="value_changed" from="SettingsTabs/Audio/MarginContainer/AudioSettings/MasterVolume/MasterVolumeSlider" to="." method="_on_master_volume_slider_value_changed"]
[connection signal="value_changed" from="SettingsTabs/Audio/MarginContainer/AudioSettings/MusicVolume2/MusicVolumeSlider" to="." method="_on_music_volume_slider_value_changed"]
[connection signal="value_changed" from="SettingsTabs/Audio/MarginContainer/AudioSettings/SFXVolume2/SFXVolumeSlider" to="." method="_on_sfx_volume_slider_value_changed"]
[connection signal="value_changed" from="SettingsTabs/Gameplay/MarginContainer/GameplaySettings/MouseSensitivity2/MouseSensitivitySlider" to="." method="_on_mouse_sensitivity_slider_value_changed"]
